# cxx_design_patterns_kata

./: LICENSE
singleton/: CMakeLists.txt  README.md
singleton/include/: inheritance.hpp  serialization.hpp  threadsafe.hpp
singleton/src/: threadsafe.cpp
singleton/tests/: CMakeLists.txt  test_thread_safety.cpp
